ass eslint and prettier to the project.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,24 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": [
+        "next/core-web-vitals",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:storybook/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"],
+    "globals": {
+        "react": "readonly"
+    },
+    "rules": {
+        "@typescript-eslint/no-unused-vars": ["error"]
+    },
+    "overrides": [
+        {
+            "files": "*.stories.@(js|jsx|ts|tsx|mjs|cjs)",
+            "rules": {
+                "storybook/hierarchy-separator": "error"
+            }
+        }
+    ]
 }
